--- a/index.html
+++ b/index.html
@@ -1,36 +1,236 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <title>Drew Ludwig</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+<head>
+	<title>Drew Ludwig</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="js/bootstrap.min.js">
+</head>
+<body>
+	<div class="wrapper">
 
-    <!-- 1. Load libraries -->
-     <!-- Polyfill(s) for older browsers -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.0/es6-shim.min.js"></script>
+		<!-- NAVIGATION -->
+		<nav class="navbar navbar-custom navbar-fixed-top">
 
-    <script src="https://npmcdn.com/zone.js@0.6.12"></script>
-    <script src="https://npmcdn.com/reflect-metadata@0.1.3"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.27/system.js"></script>
-    <script src="https://npmcdn.com/typescript@1.8.10/lib/typescript.js"></script>
+			<div class="container">
+			
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#custom-collapse">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+			
+					<!-- YOU LOGO HERE -->
+					<a class="navbar-brand" href="index.html">
+						<!-- IMAGE OR SIMPLE TEXT -->
+						<p class="font-alt">Drew L.</p>
+					</a>
+				</div>
+			
+				<div class="collapse navbar-collapse" id="custom-collapse">
+			
+					<ul class="nav navbar-nav navbar-right">
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Home</a>
+							
+						</li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages</a>
+							<ul class="dropdown-menu" role="menu">
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">About</a>
+									<ul class="dropdown-menu">
+										<li><a href="about-1.html">About 1</a></li>
+										<li><a href="about-2.html">About 2</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Services</a>
+									<ul class="dropdown-menu">
+										<li><a href="services-1.html">Services 1</a></li>
+										<li><a href="services-2.html">Services 2</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact</a>
+									<ul class="dropdown-menu">
+										<li><a href="contact-1.html">Contact 1</a></li>
+										<li><a href="contact-2.html">Contact 2</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pricing</a>
+									<ul class="dropdown-menu">
+										<li><a href="pricing-1.html">Pricing 1</a></li>
+										<li><a href="pricing-2.html">Pricing 2</a></li>
+									</ul>
+								</li>
+			
+								<li><a href="login-register.html">Login / Register</a></li>
+			
+								<li><a href="faq-1.html">FAQ</a></li>
+			
+							</ul>
+						</li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio</a>
+							<ul class="dropdown-menu" role="menu">
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Packery</a>
+									<ul class="dropdown-menu">
+										<li><a href="portfolio-white-hover.html">White</a></li>
+										<li><a href="portfolio-dark-hover.html">Dark</a></li>
+										<li><a href="portfolio-gradient-hover.html">Gradient</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Masonry</a>
+									<ul class="dropdown-menu">
+										<li><a href="portfolio-masonry-white-hover.html">White</a></li>
+										<li><a href="portfolio-masonry-dark-hover.html">Dark</a></li>
+										<li><a href="portfolio-masonry-gradient-hover.html">Gradient</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Single</a>
+									<ul class="dropdown-menu">
+										<li><a href="portfolio-single-1.html">Single 1</a></li>
+										<li><a href="portfolio-single-2.html">Single 2</a></li>
+										<li><a href="portfolio-single-3.html">Single 3</a></li>
+										<li><a href="portfolio-single-4.html">Single 4</a></li>
+										<li><a href="portfolio-single-5.html">Single 5</a></li>
+										<li><a href="portfolio-single-6.html">Single 6</a></li>
+										<li><a href="portfolio-single-7.html">Single 7</a></li>
+									</ul>
+								</li>
+			
+							</ul>
+						</li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
+							<ul class="dropdown-menu" role="menu">
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Grid</a>
+									<ul class="dropdown-menu">
+										<li><a href="blog-grid-2.html">2 columns</a></li>
+										<li><a href="blog-grid-3.html">3 columns</a></li>
+									</ul>
+								</li>
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Masonry</a>
+									<ul class="dropdown-menu">
+										<li><a href="blog-masonry-2.html">2 columns</a></li>
+										<li><a href="blog-masonry-3.html">3 columns</a></li>
+									</ul>
+								</li>
+			
+								<li><a href="blog-single.html">Single post</a></li>
+			
+							</ul>
+						</li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Shop</a>
+							<ul class="dropdown-menu" role="menu">
+			
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Grid</a>
+									<ul class="dropdown-menu">
+										<li><a href="shop-grid-col-3.html">3 columns</a></li>
+										<li><a href="shop-grid-col-4.html">4 columns</a></li>
+									</ul>
+								</li>
+			
+								<li><a href="shop-product.html">Product</a></li>
+			
+								<li><a href="shop-checkout.html">Checkout</a></li>
+			
+							</ul>
+						</li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Features</a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="components-buttons.html">Buttons</a></li>
+								<li><a href="components-icons.html">Icons</a></li>
+								<li><a href="components-boxes.html">Content boxes</a></li>
+								<li><a href="components-typography.html">Typography</a></li>
+								<li><a href="components-bars.html">Progress bars</a></li>
+								<li><a href="components-tabs.html">Tab &amp; Accordian</a></li>
+								<li><a href="components-tables.html">Pricing tables</a></li>
+								<li><a href="components-modules.html">Modules &amp; Overlays</a></li>
+							</ul>
+						</li>
+			
+						<li><a href="contact-1.html">Contact</a></li>
+			
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle search-dropdown" data-toggle="dropdown"><i class="fa fa-search"></i></a>
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<div class="dropdown-search">
+										<form role="form">
+											<input type="text" class="form-control" placeholder="Search...">
+											<button class="search-btn" type="submit"><i class="fa fa-search"></i></button>
+										</form>
+									</div>
+								</li>
+							</ul>
+						</li>
+			
+					</ul>
+				</div>
+			
+			</div>
 
-    <!-- 2. Configure SystemJS -->
-    <script src="systemjs.config.js"></script>
-    <script>
-      System.import('app').catch(function(err){ console.error(err);  });
-    </script>
-  </head>
+		</nav>
+		<!-- /NAVIGATION -->
 
-  <!-- 3. Display the application -->
-  <body>
-    <my-app>Loading...</my-app>
-  </body>
+		<!-- HERO -->
+		<section id="hero" class="module-hero module-parallax module-full-height bg-light-60" data-background="assets/images/section-1.jpg" style="height: 450px; background-image: url(img/retro.jpg); background-position: 50% -88px;">
+
+			<!-- HERO TEXT -->
+			<div class="hero-caption">
+				<div class="hero-text">
+					<h5 class="mh-line-size-4 font-alt m-b-50">Simple &amp; Powerful</h5>
+					<h1 class="mh-line-size-1 font-alt m-b-60">Drew Ludwig</h1>
+					<h5 class="mh-line-size-5 font-alt m-b-50">Responsive Multipurpose Template</h5>
+				</div>
+			</div>
+			<!-- /HERO TEXT -->
+
+		</section>
+		<!-- /HERO -->
+
+
+
+
+
+
+
+
+		
+
+		
+
+		<hr class="divider"><!-- DIVIDER -->
+
+		
+
+	</div>
+</body>
 </html>
-
-
-<!-- 
-Copyright 2016 Google Inc. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
--->
