--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
 	<title>Drew Ludwig</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="js/bootstrap.min.js">
+	<link href="js/wow.min.js">
 </head>
 <body>
 	<div class="wrapper">
