--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="js/bootstrap.min.js">
+	<link href="js/jquery-2.1.3.min.js">
 	<link href="js/wow.min.js">
 </head>
 <body>
