--- a/works.html
+++ b/works.html
@@ -114,7 +114,7 @@
 				<!-- MODULE TITLE -->
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<h2 class="module-title font-alt">Works</h2>
+						<h2 class="module-title font-alt">Work History</h2>
 					</div>
 				</div>
 				<!-- /MODULE TITLE -->
@@ -132,7 +132,7 @@
 				<!-- MODULE TITLE -->
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<h2 class="module-title font-alt">Our Works</h2>
+						<h2 class="module-title font-alt"></h2>
 					</div>
 				</div>
 				<!-- /MODULE TITLE -->
@@ -143,10 +143,9 @@
 					<div class="col-sm-12">
 						<ul id="filters" class="filters font-alt">
 							<li><a href="#" data-filter="*" class="current">All</a></li>
-							<li><a href="#" data-filter=".branding">Branding</a></li>
-							<li><a href="#" data-filter=".design">Design</a></li>
-							<li><a href="#" data-filter=".photo">Photo</a></li>
-							<li><a href="#" data-filter=".web">Web</a></li>
+							<li><a href="#" data-filter=".rmo">Rocky Mountain Oils</a></li>
+							<li><a href="#" data-filter=".reqgen">Reqgen</a></li>
+							
 						</ul>
 					</div>
 
@@ -162,13 +161,13 @@
 						<div class="grid-sizer"></div>
 
 						<!-- PORTFOLIO ITEM -->
-						<div class="work-item tall branding">
+						<div class="work-item wide rmo">
 							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-1.jpg" alt="">
+								<img src="assets/images/surf.jpg" alt="">
 								<div class="work-caption font-alt">
 									<h3 class="work-title">The European languages</h3>
 									<div class="work-descr">
-										Branding
+										rmo
 									</div>
 								</div>
 							</a>
@@ -176,13 +175,13 @@
 						<!-- /PORTFOLIO ITEM -->
 
 						<!-- PORTFOLIO ITEM -->
-						<div class="work-item design">
+						<div class="work-item  wide reqgen">
 							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-2.jpg" alt="">
+								<img src="assets/images/code.jpg" alt="">
 								<div class="work-caption font-alt">
 									<h3 class="work-title">The languages only</h3>
 									<div class="work-descr">
-										Design
+										Reqgen
 									</div>
 								</div>
 							</a>
@@ -190,9 +189,9 @@
 						<!-- /PORTFOLIO ITEM -->
 
 						<!-- PORTFOLIO ITEM -->
-						<div class="work-item design">
+						<div class="work-item wide reqgen">
 							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-3.jpg" alt="">
+								<img src="assets/images/retro.jpg" alt="">
 								<div class="work-caption font-alt">
 									<h3 class="work-title">Everyone realizes</h3>
 									<div class="work-descr">
@@ -203,118 +202,14 @@
 						</div>
 						<!-- /PORTFOLIO ITEM -->
 
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item design">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-4.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">Corporate Identity</h3>
-									<div class="work-descr">
-										Design
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item design">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-5.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">Cambridge friend</h3>
-									<div class="work-descr">
-										Design
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item wide-tall branding photo web">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-6.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">The grammar of the resulting language</h3>
-									<div class="work-descr">
-										Branding / Photo / Web
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item wide design photo web">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-7.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">A collection of textile samples</h3>
-									<div class="work-descr">
-										Design / Photo / Web
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item branding photo">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-8.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">Gregor then turned</h3>
-									<div class="work-descr">
-										Branding / Photo
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item branding photo">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-9.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">He must have tried it</h3>
-									<div class="work-descr">
-										Branding / Photo
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
-
-						<!-- PORTFOLIO ITEM -->
-						<div class="work-item wide design web">
-							<a href="portfolio-single-1.html">
-								<img src="assets/images/portfolio/img-10.jpg" alt="">
-								<div class="work-caption font-alt">
-									<h3 class="work-title">However hard he threw himself</h3>
-									<div class="work-descr">
-										Design / Web
-									</div>
-								</div>
-							</a>
-						</div>
-						<!-- /PORTFOLIO ITEM -->
+						
 
 					</div>
 
 				</div>
 				<!-- /WORKS GRID -->
 
-				<!-- SHOW MORE -->
-				<div class="row m-t-70 text-center">
-					<div class="col-sm-12">
-
-						<button id="show-more" class="btn btn-round btn-b">More works</button>
-
-					</div>
-				</div>
-				<!-- /SHOW MORE -->
+			
 
 			</div>
 
