--- a/contact.html
+++ b/contact.html
@@ -348,11 +348,11 @@ function postToGoogle() {
         statusCode: {
             0: function() {
                             //Success message
-                            window.location.href = "drewludwig.github.io/thanks";
+                            window.location.href = "/thanks";
                         },
                         200: function() {
                             //Success Message
-                            window.location.href = "drewludwig.github.io/thanks";
+                            window.location.href = "/thanks";
                         }
                     }
                 });
