--- a/thanks.html
+++ b/thanks.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Incanto - Responsive Multipurpose Template</title>
+	<title>Thank You</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon-code.ico">
@@ -113,7 +113,7 @@
 			<div class="hero-caption">
 				<div class="hero-text">
 					
-					<h5 class="mh-line-size-5 font-alt m-b-50"></h5>
+					<h5 class="mh-line-size-5 font-alt m-b-50">Thank You For Your Response</h5>
 				
 				</div>
 			</div>
