--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	
-	<title>Incanto - Responsive Multipurpose Template</title>
+	<title>Experience</title>
 	
 	<!-- Favicons -->
 	<link rel="shortcut icon" href="assets/images/favicon-code.ico">
