--- a/works.html
+++ b/works.html
@@ -186,7 +186,7 @@
 
 				<div class="row">
 					<div class="col-sm-6 col-sm-offset-3">
-						<h2 class="module-title font-alt">Catelog</h2>
+						<h2 class="module-title font-alt" id="catalog">Catalog</h2>
 					</div>
 				</div>
 
